# TinyToyProject

./: Edge.cpp  Edge.h  Polygon.cpp  Polygon.h  Triangle.h  Vector2DD.h  car.h  constants.h  door.h  glutWindow.cpp  glutWindow.h  main.cpp  mesh.h
textures/: bluecar.tga  browncar.tga  carpark.tga  carstop.tga  cyancar.tga  greencar.tga  greycar.tga  orangecar.tga  purplecar.tga  redcar.tga  whitecar.tga  yellowcar.tga
tiny-cars-project/: CMakeLists.txt  Curves.h  Gate.h  Vector2D.h  door.cpp  mesh.cpp
